fixed auth backgroun on mobile

--- a/src/stylesheet/pages/_auth.scss
+++ b/src/stylesheet/pages/_auth.scss
@@ -83,7 +83,7 @@
     }
 
     @include respond(sm) {
-
+      background-image: none;
       width: 100%;
       height: 300px;
 
